Se agregan webs 2o semestre 2020 + rename archivos

--- a/components/2020-1-grupo3.html
+++ b/components/2020-1-grupo3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>tarea N°3</title>
-        <link rel="stylesheet" href="../css/styles_grupo3.css">
+        <link rel="stylesheet" href="../css/2020-1-grupo3.css">
     </head>
     <body>
         <header>
