--- a/components/2020-1-grupo5.html
+++ b/components/2020-1-grupo5.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Organizador de Archivos</title>
-    <link rel="stylesheet" href="../css/styles_grupo5.css"><!--para comunicar html con css -->
+    <link rel="stylesheet" href="../css/2020-1-grupo5.css"><!--para comunicar html con css -->
 </head>
 
 <body>
