--- a/components/2020-1-grupo4.html
+++ b/components/2020-1-grupo4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Boletería Simple Tickets</title>
-    <link rel="stylesheet" href="../css/styles_grupo4.css">
+    <link rel="stylesheet" href="../css/2020-1-grupo4.css">
 </head>
 
 <body>
