--- a/css/styles.css
+++ b/css/styles.css
@@ -200,21 +200,18 @@ body {
 .footer {
     background: #094044;
     display: flex;
-    align-items: center;
-    height: 100px;
+    align-items: left;
+    flex-direction: column;
     width: 100%;
 }
 
-.footer a {
+.footer > p {
     color: white;
     cursor: pointer;
     font-size: 14px;
     padding-left: 30px;
+    margin-top: 0px;
     text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
 }
 
 .register {
