--- a/components/error404.html
+++ b/components/error404.html
@@ -8,13 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 700px)">
   <!-- Title -->
   <title>Error 404</title>
 </head>
 <body>
   <header class="header">
     <img class="header__img" src="../assets/logo_ufro.png" alt="Logo UFRO">
-  </header>
+</header>
 
   <section class="error-message">
     <div class="error-message__animation">404</div>
@@ -27,6 +28,8 @@
   </section>
   
   <footer class="footer">
-  </footer>
+    <p>©2021 Matthias Clein E.</p>
+    <p>Todos los derechos reservados.</p>
+</footer>
 </body>
 </html>
